# MapProject

./: .gitignore  pyproject.toml  readme.md
floorproject/: db.sqlite3  manage.py
floorproject/administrator/: admin.py  apps.py  decorators.py  forms.py  models.py  views.py
floorproject/administrator/migrations/: 0001_initial.py
floorproject/administrator/templates/administrator/: base.html  cartes.html  delete_user.html  edit_carte.html  edit_plans.html  index.html  login.html  plans.html  upload.html  user_form.html  users.html
floorproject/administrator/templatetags/: form_tags.py
floorproject/floorproject/: asgi.py  settings.py  urls.py  wsgi.py
floorproject/floorproject/static/json/: global_map.json  maps.json
floorproject/public/: apps.py  views.py
floorproject/public/templates/public/: base.html  cartes.html  index.html  plans.html
